
- Issue #8164: Don't allow lambda functions to have a docstring.

- Issue #3137: Don't ignore errors at startup, especially a keyboard interrupt
  (SIGINT).  If an error occurs while importing the site module, the error is
  printed and Python exits.  Initialize the GIL before importing the site
  module.

- Code objects now support weak references.

Library
-------

- Issue #7703: ctypes supports both buffer() and memoryview().  The former is
  deprecated.

- Issue #7860: platform.uname now reports the correct 'machine' type
  when Python is running in WOW64 mode on 64 bit Windows.

- logging: Added getChild utility method to Logger and added isEnabledFor
  method to LoggerAdapter.

- Issue #8201: logging: Handle situation of non-ASCII and Unicode
  logger names existing at the same time, causing a Unicode error
  when configuration code attempted to sort the existing loggers.

- Issue #8200: logging: Handle errors when multiprocessing is not
  fully loaded when logging occurs.

- Issue #3890: Fix recv() and recv_into() on non-blocking SSL sockets.

- Issue #8179: Fix macpath.realpath() on a non-existing path.

- Issue #8024: Update the Unicode database to 5.2.

- Issue #8104: socket.recv_into() and socket.recvfrom_into() now support
  writing into objects supporting the new buffer API, for example bytearrays
  or memoryviews.

- Issue #4961: Inconsistent/wrong result of askyesno function in tkMessageBox
  with Tcl/Tk-8.5.

- Issue #8140: extend compileall to compile single files. Add -i option.

- Issue #7356: ctypes.util: Make parsing of ldconfig output independent of
  the locale.

- Issue #7774: Set sys.executable to an empty string if ``argv[0]`` has been
  set to an non existent program name and Python is unable to retrieve the real
  program name.

- Issue #8117: logging: Improved algorithm for computing initial rollover time
  for ``TimedRotatingFileHandler`` by using the modification time of an