@@ -29,6 +29,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #7512: shutil.copystat() could raise an OSError when the filesystem
+  didn't support chflags() (for example ZFS under FreeBSD).  The error is
+  now silenced.
+
 - Issue #7703: ctypes supports both buffer() and memoryview().  The former is
   deprecated.
 
